update module text-center, text-image

--- a/src/html/pages/accommodations.html
+++ b/src/html/pages/accommodations.html
@@ -1,12 +1,15 @@
 <partial src="header.html"></partial>
 
 <!-- Main content here -->
-<partial src="modules/mod-hero.html"></partial>
+<partial src="modules/mod-banner-slider-no-form.html"></partial>
+<div class="mt-5"></div>
 <partial src="modules/mod-text-center.html"></partial>
+<div class="mt-5"></div>
 <partial src="modules/mod-text-image.html"></partial>
-<partial src="modules/mod-slider.html"></partial>
-<partial src="modules/mod-slider.html"></partial>
-<partial src="modules/mod-slider.html"></partial>
+<div class="mt-5"></div>
+<partial src="modules/mod-contact-form.html"></partial>
+
+
 <!---->
 
 <partial src="footer.html"></partial>
