update module banner slider, moduleadd mteâẽâext image homepage

--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -2,7 +2,33 @@
 
 <!-- Main content here -->
 <partial src="modules/mod-banner-slider.html"></partial>
-<partial src="modules/mod-hero.html"></partial>
+<div class="pb-5"></div>
+<div class="d-none d-lg-block pb-5"></div>
+<section class="module">
+    <div class="container">
+        <div class="row justify-content-center align-items-center">
+            <div class="col-lg-7">
+                <div class="pe-5">
+                    <h2>Chào mừng Quý khách đến với Khách sạn Hà Nội</h2>
+                    <div class="last-mb-none">
+                        <p>Khách sạn Hà Nội là khách sạn Quốc tế đầu tiên tại Hà Nội với 218 phòng nghỉ tiện nghi, hiện đại
+                            và sang trọng. Đặc biệt, sở hữu vị trí trung tâm bên Hồ Giảng Võ thanh bình, kết nối thuận tiện
+                            với các văn phòng chính phủ, đại sứ quán, khu thương mại sầm suất, nhà hàng,… Khách sạn là điểm
+                            dừng chân lý tưởng cho du khách trong và ngoài nước mỗi khi có chuyến công tác hay du lịch cùng
+                            bạn bè và người thân. Bên cạnh đó, Khách sạn Hà Nội nổi tiếng là địa chỉ hàng đầu về ẩm thực
+                            Trung Hoa cùng các dịch vụ giải trí phong phú, hy vọng sẽ đem lại cho Quý khách những trải
+                            nghiệm thú vị và hài lòng nhất.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-5">
+                <img class="img-fluid" src="img/Hanoi_Hotel-768x1024.jpg" alt="">
+            </div>
+        </div>
+    </div>
+</section>
+<div class="pb-5"></div>
+<div class="pb-5"></div>
 <partial src="modules/mod-slider.html"></partial>
 <partial src="modules/mod-hero.html"></partial>
 <partial src="modules/mod-slider.html"></partial>
