--- a/src/html/pages/about.html
+++ b/src/html/pages/about.html
@@ -2,6 +2,8 @@
 
 <!-- Main content here -->
 <partial src="modules/mod-hero-2.html"></partial>
+<partial src="modules/mod-gallery.html"></partial>
+
 <!---->
 
 <partial src="footer.html"></partial>
